--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   
-  <h1>Hello github actions</h1>
-  <p>this is simple website</p>
+  <h1>Hello Github Pages</h1>
+  <p>My first page</p>
 
   <button id="myButton">click me</button>
   <script src="script.js"></script>
